fixed alignment on left hand of the menu of the endpoint-view

--- a/src/orbital-designer/src/app/components/orbital-common/side-bar/side-bar.component.scss
+++ b/src/orbital-designer/src/app/components/orbital-common/side-bar/side-bar.component.scss
@@ -50,16 +50,18 @@
     }
 
     .mock-name {
-      justify-content: space-around;
+      justify-content: space-between;
 
       .mock-list-item {
         overflow: hidden;
         max-width: 15em;
         cursor: pointer;
+        margin-left: 18px;
       }
 
       .close-button {
         padding-bottom: 3.1em;
+        justify-content: right;
       }
     }
   }
